--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,11 @@ jobs:
 
 
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
       - name: Use system Python 3.9
         run: |
           sudo alternatives --install /usr/bin/python python /usr/bin/python3.9 1
           python --version
+          pip3.9 install -r requirements.txt
 
       - name: Install dependencies
         run: |
