--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,11 @@ jobs:
 
 
 
-      - name: Use system Python 3.9
+      - name: Use system Python (e.g., 3.11)
         run: |
-          sudo alternatives --install /usr/bin/python python /usr/bin/python3.9 1
-          python --version
-          pip3.9 install -r requirements.txt
+          python3.9 --version
+          python3.9 -m pip install --upgrade pip
+          python3.9 -m pip install -r requirements.txt
 
       - name: Install dependencies
         run: |
