--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,11 @@ jobs:
       - name: Use system Python (e.g., 3.11)
         run: |
           python3.9 --version
-          python3.9 -m pip install --upgrade pip
-          python3.9 -m pip install -r requirements.txt
+          python3.9 -m pip3 install -r requirements.txt
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip3 install -r requirements.txt
 
       - name: Run Flask app
         run: |
