--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
 
 
-      - name: Use system Python (e.g., 3.11)
+      - name: Use system Python
         run: |
           python3.9 --version
           python3.9 -m pip3 install -r requirements.txt
