--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,12 @@ jobs:
       - name: Use system Python
         run: |
           python3.9 --version
-          python3.9 -m pip3 install -r requirements.txt
+          python3.9 -m pip install --upgrade pip
+          python3.9 -m pip install -r requirements.txt
 
       - name: Install dependencies
         run: |
-          pip3 install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Run Flask app
         run: |
